# include_crypt

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
codegen/: Cargo.toml  build.rs
codegen/examples/: basic.rs
codegen/src/: aes.rs  args.rs  key.rs  lib.rs  utils.rs  xor.rs
codegen/src/implementations/: aes.rs  args.rs  files.rs  mod.rs  xor.rs
crypto/: Cargo.toml
crypto/src/: aes.rs  key.rs  lib.rs  xor.rs
include-crypt/: Cargo.toml
include-crypt/examples/: basic.rs  basic_aes.rs  basic_folder.rs  basic_xor.rs
include-crypt/src/: lib.rs
include-crypt/tests/: aes.rs  folder.rs  xor.rs
