[package]
name = "include-crypt-codegen"
version = "0.1.0"
authors = ["not-matthias <26800596+not-matthias@users.noreply.github.com>"]
edition = "2018"
build = "build.rs"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.41", features = ["full", "extra-traits"] }
quote = "1.0.7"
proc-macro2 = "1.0.23"
rand = "0.7.3"
libflate = { version = "1.0.2", optional = true }

include-crypt-crypto = { path = "../crypto" }

[features]
default = []
compression = ["libflate"]
force-build = []