[package]
name = "include-crypt-codegen"
version = "0.1.0"
authors = ["not-matthias <26800596+not-matthias@users.noreply.github.com>"]
edition = "2018"
build = "build.rs"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.42", features = ["full", "extra-traits"] }
quote = "1.0.7"
proc-macro2 = "1.0.23"
rand = "0.7.3"
libflate = { version = "1.0.2", optional = true }
glob = "0.3.0"

include-crypt-crypto = { path = "../crypto" }

[dev-dependencies]
obfstr = "0.2.0"

[features]
default = []
compression = ["libflate"]
force-build = []
