[package]
name = "include-crypt-codegen"
version = "0.1.0"
authors = ["not-matthias <26800596+not-matthias@users.noreply.github.com>"]
edition = "2018"
build = "build.rs"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.60", features = ["full", "extra-traits"] }
quote = "1.0.8"
proc-macro2 = "1.0.24"
rand = "0.8.3"
libflate = { version = "1.0.3", optional = true }
glob = "0.3.0"

include-crypt-crypto = { path = "../crypto" }

[dev-dependencies]
obfstr = "0.2.4"
include-crypt = { path = "../include-crypt" }

[features]
default = []
compression = ["libflate"]
force-build = []
