[package]
name = "include-crypt-crypto"
version = "0.1.0"
authors = ["not-matthias <26800596+not-matthias@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.6.0"
cfb-mode = "0.6.0"

rand = "0.8.3"
hex = "0.4.2"
