[package]
name = "include-crypt"
version = "0.1.0"
authors = ["not-matthias <26800596+not-matthias@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
include-crypt-codegen = { path = "../codegen" }
include-crypt-crypto = { path = "../crypto" }

libflate = { version = "1.0.3", optional = true }
obfstr = "0.2.4"

[features]
default = []
compression = ["include-crypt-codegen/compression", "libflate"]
force-build = ["include-crypt-codegen/force-build"]
