[package]
name = "include-crypt"
description = "Safely embed files into your binary."
version = "0.1.0"
authors = ["not-matthias <26800596+not-matthias@users.noreply.github.com>"]
edition = "2018"
readme = "../README.md"
license-file = "../LICENSE"

[dependencies]
include-crypt-codegen = "0.1.1"
include-crypt-crypto = "0.1.0"

libflate = { version = "1.0.3", optional = true }
obfstr = "0.2.4"

[features]
default = []
compression = ["include-crypt-codegen/compression", "libflate"]
force-build = ["include-crypt-codegen/force-build"]
